# cw

./: LICENSE  README.md  pyproject.toml
src/claude_worktrees/: __init__.py  cli.py  config.py  deps.py  github.py  hooks.py  worktree.py
